--- a/WebService/app/src/main/res/values/strings.xml
+++ b/WebService/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">WebService</string>
+    <string name="application_name">AMETAP Mobile</string>
+    <string name="title_activity_demander_activte">Demander_activte</string>
+    <string name="title_activity_menu">MenuAct</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_navigation">Navigation</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
